--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,6 @@
       "@dictionaries/*": ["dictionaries/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "api/mongodb.js", "src/app/pages/test/page.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "api/mongodb.js", "src/app/pages/test/page.jsx", "src/app/api/app.ts"],
   "exclude": ["node_modules"]
 }
