--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.1",
     "next": "^15.3.2",
+    "next-intl": "^4.1.0",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
